# cpp-cmake-template

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  pwsh-dev.ps1  setup.ps1  setup.sh
src/: main.cpp
